[gd_scene load_steps=2 format=3 uid="uid://bg7wds6bknj0e"]

[ext_resource type="Script" path="res://Timer.gd" id="1_66mge"]

[node name="Timer" type="Timer"]
wait_time = 10.0
script = ExtResource("1_66mge")

[node name="Button" type="Button" parent="."]
offset_right = 53.0
offset_bottom = 49.0
text = "开始"

[node name="Button2" type="Button" parent="."]
offset_left = 57.0
offset_right = 110.0
offset_bottom = 49.0
text = "暂停"

[node name="Button4" type="Button" parent="."]
offset_left = 116.0
offset_right = 169.0
offset_bottom = 49.0
text = "继续"

[node name="Button3" type="Button" parent="."]
offset_left = 174.0
offset_right = 227.0
offset_bottom = 49.0
text = "停止
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
